Bug 440712 - Dolphin should automatically regenerate subfolder thumbnails after dropping files into them
Summary: Dolphin should automatically regenerate subfolder thumbnails after dropping f...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-07 20:20 UTC by Nagy Tibor
Modified: 2024-01-13 09:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Reproduction (152.85 KB, video/mp4)
2021-08-07 20:20 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2021-08-07 20:20:11 UTC
Created attachment 140573 [details]
Reproduction

SUMMARY
When drag and dropping thumbnailable files into subfolders, Dolphin doesn't automatically regenerate the subfolder thumbnails. This can make non-empty folders appear as empty until the file list is manually refreshed. I'm reporting this bug because it has spooked me for a second thinking I lost my files while cleaning up my home folder.

STEPS TO REPRODUCE
1. Enable folder thumbnails at "Configure Dolphin..." -> "General" -> "Previews" -> "Folders"
2. Create a new empty folder.
3. Drag and drop some thumbnailable files into that folder.
4. Check that subfolder's icon. It doesn't show any thumbnails on the subfolder icon. Here's the bug.
5. Manually refresh the file view by pressing F5 or by navigating away and back.
6. After a manual refresh Dolphin now shows how the subfolder icon should have looked like after Step 4.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-25-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i3-5010U CPU @ 2.10GHz
Memory: 7.7 GiB of RAM
Graphics Processor: GeForce 920M/PCIe/SSE2
Comment 1 Bug Janitor Service 2023-07-24 10:27:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1355
Comment 2 Méven Car 2023-08-29 08:43:15 UTC
Git commit 8b515e3827fa464384ae142cce493e9a97351c5b by Méven Car, on behalf of Méven Car.
Committed on 29/08/2023 at 10:23.
Pushed by meven into branch 'master'.

KCoreDirLister: updateDirectory: update parent folder if it is listed

This allows to send refreshItems signal, when a file is created in a directory whose parent is listed, for that directory.

M  +32   -0    autotests/kdirlistertest.cpp
M  +1    -0    autotests/kdirlistertest.h
M  +8    -2    src/core/kcoredirlister.cpp

https://invent.kde.org/frameworks/kio/-/commit/8b515e3827fa464384ae142cce493e9a97351c5b
Comment 3 Méven Car 2024-01-13 09:29:24 UTC
Git commit 2cc472f1ad01b53a114e807c6aaa49637334109b by Méven Car, on behalf of Méven Car.
Committed on 13/01/2024 at 10:16.
Pushed by meven into branch 'kf5'.

KCoreDirLister: updateDirectory: update parent folder if it is listed

This allows to send refreshItems signal, when a file is created in a directory whose parent is listed, for that directory.
(cherry picked from commit 8b515e3827fa464384ae142cce493e9a97351c5b)

M  +32   -0    autotests/kdirlistertest.cpp
M  +1    -0    autotests/kdirlistertest.h
M  +8    -2    src/core/kcoredirlister.cpp

https://invent.kde.org/frameworks/kio/-/commit/2cc472f1ad01b53a114e807c6aaa49637334109b