KCoreDirLister: updateDirectory: update parent folder if it is listed

This allows to send refreshItems signal, when a file is created in a directory whose parent is listed, for that directory.

BUG: 440712